# BallisticSimulator

./: .gitignore  CMakeLists.txt  README.md
src/: Application.cpp  Application.hpp  CMakeLists.txt  Main.cpp  Math.hpp  Simulator.cpp  Simulator.hpp
test/: CMakeLists.txt  Simulator_test.cpp
